bluejay-validator/tests/snapshots/executable_integration_test__error@fragment_spread_type_exists.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/fragment_spread_type_exists.graphql
---
Error: No type definition with name `NotInSchema`
   ╭─[fragment_spread_type_exists.graphql:1:31]
   │
 1 │ fragment notOnExistingType on NotInSchema {
   │                               ─────┬─────  
   │                                    ╰─────── No type with this name
───╯

Error: No type definition with name `NotInSchema`
   ╭─[fragment_spread_type_exists.graphql:6:10]
   │
 6 │   ... on NotInSchema {
   │          ─────┬─────  
   │               ╰─────── No type with this name
───╯
